# url-shortner

./: README.md  pyproject.toml
urlshortner/shortner/: urls.py  views.py
urlshortner/shortner/migrations/: 0001_initial.py
urlshortner/templates/: index.html
urlshortner/urlshortner/: settings.py
