[tool.poetry]
name = "url-shortner"
version = "0.1.0"
description = ""
authors = ["Haider Ali <haider.lee23@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.5"
Django = "3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
